2003-06-13  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* packages/asio/: this package add ASIO support on Windows version.
	  - ASIO Output works with M AUDIO USB QUATTRO (ASIOType is ASIOTInt16LSB).
	  - ASIO Input is not tested.
	  - TODO:
	    - test ASIO input.
	    - add switch between FTS scheduler and ASIO callback.
	    - add all conversion function between all ASIO format and FTS.

2003-05-28  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* client/python/ircam/fts/client/FtsServerConnection.py: fixed thread stop if socket is closed.

	* client/python/ircam/fts/client/FtsSocketConnection.py: use select before trying to read on socket (select is available on Windows for socket), removed exception handler for read and write (recv and send doesn't raise any exception).
	
	* packages/alsa/c/src/alsaaudiomanager.c (alsaaudiomanager_scan_plugins): avoid opening of dsnoop and dmix ALSA plugins (if you open/close these plugins devices are still opened). Thanks to Paul Brossier for bug report.

2003-05-26  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fixed C++ compilation when <fts/fts.h> is included.
	
	* include/fts/dsp.h: changed function argument class into cl (class is a C++ reserved keyword).
	
	* fts/patcher.c, include/fts/patcher.h, include/ftsprivate/patcher.h: 
	     * renamed member name template of fts_patcher structure into template_definition (template is a C++ reserved keyword).
	     * renamed this into self (this is a C++ reserved keyword).

	* added dsdev, mmio and winmidi packages in distribution.

	* added Visual C++ project/workspace files in distribution.

2003-05-22  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* utils/m4/jmax.m4: added a m4 file which contains AM_JMAX_CONFIG m4 macro.
	AM_JMAX_CONFIG set the following variables:
	    - JMAX_INCLUDES: compilation flag.
	    - JMAX_LDFLAGS: link flag.
	    - JMAX_PACKAGE_DIR: path to standard package installation directory.
	
2003-20-05  Diemo Schwarz  <schwarz@ircam.fr>
