@@ -1,4 +1,4 @@
 JMAX_MAJOR_VERSION=4
-JMAX_MINOR_VERSION=0
-JMAX_PATCH_VERSION=3
+JMAX_MINOR_VERSION=1
+JMAX_PATCH_VERSION=0
 JMAX_VERSION_STATUS=_latest_cvs
